--- a/b_exam_talk.tex
+++ b/b_exam_talk.tex
@@ -23,8 +23,6 @@
 \usepackage{graphicx}
 \captionsetup[figure]{labelformat=empty}
 
-
-
 \newcommand{\E}{\mathbb{E}}
 \newcommand{\KG}{\mathrm{KG}}
 \newcommand{\KGs}{\mathrm{KG}}
@@ -86,6 +84,7 @@
 \newcommand{\allpv}{\pmb{\allp}}
 \newcommand{\Pv}{\mathbf{P}}
 \newcommand{\Fcal}{\mathbf{F}}
+\newcommand{\ind}[1]{\mathbbm{1}(#1)}
 %------------MACROS for entire/sub problems---------
 \newcommand{\allp}{\pmb{\pi}}
 \newcommand{\allpset}{\mathbf{\Pi}}
@@ -130,6 +129,7 @@ We consider an MDP $(\allstates,\allactions,\allpr^{\cdot},\allr)$ that consists
 \item Action space $\allactions$ is the cross-product of $K$ $\subactions$. $\subactions=\{0,1\}$.
 \item Reward $\allr_t(\allstate,\allaction) = \sum_{x=1}^K \subr_t(\substate_x,\subaction_x)$, $1\leq t\leq T$, is additive of the reward of individual sub-processes.
 \item Transition probability $\allpr^{\allaction}(\allstate',\allstate) = \prod_{x=1}^{K}\subpr^{\subaction_x}(\substate'_x,\substate_x)$.
+\item Starts at an initial state $\allstate_1$.
 \end{itemize}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -174,7 +174,7 @@ The complexity grow exponentially with the number of sub-processes $K$, and beco
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
-\frametitle{Pre-computations: 1. Optimal Lagrange Multiplier of \eqref{prime}}
+\frametitle{Pre-computations: 1. Optimal Lagrange Multiplier of \eqref{prime2}}
 Relax the original problem \eqref{prime} to
 \begin{equation}\label{prime2}
 \begin{aligned}
@@ -193,7 +193,7 @@ The Lagrangian relaxation of \eqref{prime2}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
-\frametitle{Pre-computations: 1. Optimal Lagrange Multiplier of \eqref{prime}}
+\frametitle{Pre-computations: 1. Optimal Lagrange Multiplier of \eqref{prime2}}
 Decomposition of the Lagrangian relaxation
 \begin{equation}\label{dec}
 P(\lambdav)=K Q(\lambdav) + \sum_t\lambda_t m_t,
@@ -204,407 +204,129 @@ Q(\lambdav)=\max_{\subp\in \subpset}\mathbb{E}^{\subp}\left[\sum_{t=1}^{T}\subr_
 \end{equation}
 is the objective function for sub-process $(\substates,\subactions,\subpr^{\cdot},\subr)$. Definition of policy $\subp$ is similar to $\allp$, with  $\subp(\substate,\subaction,t) = P(\subaction|\substater_t=\substate)$.
 
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{Pre-computations: 1. Optimal Lagrange Multiplier of \eqref{prime2}}
+Optimal Lagrange Multiplier $\lambdav^*$ is a solution to the Lagrange dual
+\begin{equation}\label{eq:dual}
+\min_{\lambdav} P(\lambdav) = K\left(\min_{\lambdav}Q(\lambdav)+\sum_t\lambda_t\frac{m_t}{K}\right),
+\end{equation}
+which can be solved by the following linear program (LP):
+\small
+\begin{equation}\label{LP-p}
+\begin{aligned}
+& \underset{\{V(s,t),\lambda_t:s\in\substates,t\in\{1,...,T\}\}}{\text{min}}
+& & V(s_1,1)+\frac{1}{K}\sum_t \lambda_t m_t \\
+& \text{subject to}
+& & \hspace{-1cm}V(s,t)-\sum_{s'\in\substates}P^a(s,s')V(s',t+1)\geq r_t(s,a)-\lambda_ta, \\
+& & &\forall\; s\in\substates,a\in\subactions,1\leq t\leq T-1\\
+& & &\hspace{-1cm} V(s,T)\geq r_T(s,a)-\lambda_1a\;\;\;\forall\;s\in\substates,a\in\subactions
+\end{aligned}
+\end{equation}
+\normalsize
+where $V^*$ corresponds to the value function of problem \eqref{dpx}.
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{Pre-computations: 1. Optimal Lagrange Multiplier of \eqref{prime2}}
+Remarks:
+\begin{itemize}
+\item Problem \eqref{LP-p} has $O(|\substates|T)$ variables and $O(|\substates||\subactions|)T$ constraints, which is manageable.
+\item $P(\lambda)$ is an point-wise maxdimum of a group of affine functions of $\lambdav$, hence convex in $\lambdav$. \eqref{eq:dual} can also be solved by sub-gradient descent.
+\end{itemize}
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{Pre-computations: 2. Occupation Measure $\rho^*$ of an optimal policy of $Q(\lambdav^*)$}
+\textbf{Occupation measure} of a policy $\pi$: the fraction of the time a process spent in each state-action pair at a time step under $\pi$. 
+
 \vspace{0.5cm}
-Remark: Problem \eqref{dpx} can be solved using the Bellman recursion with complexity $O(|\substates||\subactions|T)$,  hence it is computationally feasible.
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Pre-computations: 2. Occupation Measure $\rho^*$}
-Alternatively we can compute $$
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{The Optimal Policy Puts Samples Where They Help Most}
-%    \begin{figure}
-%      \centering
-%      \only<1>{\includegraphics[width=4in]{MCC2a.pdf}}
-%      \only<2>{\includegraphics[width=4in]{MCC3a.pdf}}
-%      \only<3>{\includegraphics[width=4in]{MCC3b.pdf}}
-%    \end{figure}
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Literature Review}
-
-Related work for MCS in simulation scenario:
-\begin{itemize}
-\item Frequentist work: Paulson (1952) and Dunnett (1955)(one-stage procedure, normal sampling); Dudewicz and Dalal (1983), Bofinger and Lewis (1992), Damerdji and Nakayama (1996) (Two stage procedures, more general sampling distributions)
-\item Similar work: Xie and Frazier (2013)(Fully sequential in a Bayesian setting)
-\begin{itemize}
-\item We consider a finite horizon, rather than a geometric horizon and infinite horizon.
-\item We allow cost per sample to be optional.
-\item We look at allocating parallel simulation resources
-\end{itemize}
-\end{itemize}
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Literature Review}
-
-Related work for crowdsourcing scenario:
-\begin{itemize}
-\item RayKar et al(2010), Whitehill et al(2009)(static inference); Thanh et al(2013)(static budget allocation); Karger et al(2013)(dynamic assignment of tasks but require large worker budget)
-\item Similar work: Chen et al(2013)(dynamic allocation under Bayesian framework with optimal policy in the form of a DP)
-\begin{itemize}
-\item We offer an upper bound in addition to a heuristic
-\item We consider a continuous time horizon and a M/M/k queue to model the flow of workers.
-\end{itemize}
-\end{itemize}
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Problem set-up for simulation scenario}
-
-\begin{itemize}
-\item $k$ alternatives
-\item $m$ parallel simulating resources per time step
-\item $N$ time horizon
-\item $\theta_x$ is the underlying true performance of alternative $x$, $x\in\{1,...,k\}$
-\item $d_x$ the known threshold for alternative $x$
-\item $z_{n,x}$ is the number of simulation resources to use on alternative $x$ at time step $n$. This is our allocation decision. $\sum_x z_{n,x}\leq m$
-\item After time step $N$, for each alternative $x$, we decide whether $\theta_x>d_x$ based on the past results of simulation
-\item We obtain a reward $R = \sum_x R_x$. $R_x$ can be a 0-1 reward or linear reward.
-\end{itemize}
-{\Large \color{red} Goal:Find an allocation of simulation resources to best support the decision at time N}
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Problem set-up for crowdsourcing scenario}
-
-\begin{itemize}
-\item $k$ labeling tasks
-\item $N$ total workers
-\item $T$ time horizon
-\item M/M/k queue: workers come in with rate $r$, and complete their job with rate $\mu$.
-\item $\theta_x$ is the underlying likelihood for a task to have a positive label.
-\item $d_x$ the known threshold for alternative $x$
-\item $z_{l,x}\in \{0,1\}$ indicates whether the $l^{th}$ worker is assigned to task $x$.
-\item After worker budget $N$ has been exhausted or time $T$ has been reached, for each alternative $x$, we decide whether whether the true label is positive or negative based on a 1-0 reward.
-\end{itemize}
-{\Large \color{red} Goal:Find an allocation of workers to best support the final decision on true labels}\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{We use a Bayesian approach}
-
-Use the simulation-scenario as an example:
-\begin{itemize}
-\item $Y_{n,x}$ is the number of successes observed after we do $z_{n,x}$ simulations on alternative $x$ at time $n$
-\[Y_{n,x}|\theta_x,z_{n,x}\sim \mathrm{Binomial}(z_{n,x},\theta_x)\]
-\item We use Beta as a conjugate prior 
-$\theta_x$ \[\theta_x \sim \mathrm{Beta}(\alpha_{0,x},\beta_{0,x}).\]
-\begin{equation*}
-  \theta_x | z_{1,x}, Y_{1,x}, \ldots, z_{n,x}, Y_{n,x} 
-  \sim \mathrm{Beta}(\alpha_{n,x},\beta_{n,x}).
-\end{equation*}
-\end{itemize}
-The Bayesian approach for the crowdsourcing scenario works in similar manner.
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{We use a Bayesian approach}
-The allocation problem under Bayesian framework is 
-\begin{equation}\label{optV}
-\sup_{\pi} \mathbb{E}^{\pi} \left[R\Big|\text{prior}\right]
+To compute $\rho^*$, we solve the following linear program (LP):
+\small
+\begin{equation}\label{eq:lp}
+\begin{aligned}
+& \underset{\rho}{\text{max}}
+& & \sum_{t=1}^{T}\sum_{a\in\subactions}\sum_{s\in\substates}\rho(s,a,t)r_t(s,a) \\
+& \text{subject to}
+& & \sum_{s\in\substates}\rho(s,1,t)=\frac{m_t}{K}, \forall t=1.\ldots,T\\
+& & & \hspace{-1cm}\sum_{a\in \subactions}\rho(s,a,t) - \sum_{a\in\subactions}\sum_{s'\in\substates}\rho(s',a,t-1)\subpr^{a}(s',s)=0, \forall \substate\in\substates,2\leq t\leq T\\
+& & & \hspace{-1cm}\sum_{a\in\subactions}\rho(s,a,1)=\ind{s=s_1} \;\;\forall s\in\substates\\
+& & & \hspace{-1cm}\rho(s,a,t)\geq 0, \; \forall s\in\substates,a\in\subactions,t=1,\ldots,T.
+\end{aligned}
 \end{equation}
-Where a policy $\pi$ is a mapping from histories onto allocations of resources with:
-\begin{itemize}
-\item  $\zv_n = (z_{n,1},\ldots,z_{n,k})\in \mathbb{N}^k$ satisfying \[\sum_{x=1}^k z_{n,x}\leq m\] for simulation scenario
-\item $\zv_l = (z_{l,1},...,z_{l,k}) \in \mathbb{N}^k$ satisfying \[\sum_{x=1}^k z_{l,x}\leq 1\] for crowdsourcing scenario
-\end{itemize}
 \end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Dynamic Programming gives an optimal solution}
-We formulate the simulation problem as a dynamic program with
-\begin{itemize}
-\item state at time $n$, $\Sv_n = (s_{n,1},\ldots,s_{n,k})$ = posterior parameters of all the alternatives
-\item value function $V_n(\Sv_n)$ = the maximum expected total reward to be obtained from time step n onward given the current state $\Sv_n$.
-\item The optimal value is $V_0(\mathbf{S}_0)$ = (\ref{optV})
-\item The optimal policy $\pi^*$ is the sequence of $\zv_1^*,\ldots,\zv_N^*$ that achieves the maximum in Bellman's recursion
-\end{itemize}
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Dynamic Programming gives an optimal solution}
-
-Similarly, we formulate the crowdsourcing problem as a dynamic program.
-\begin{itemize}
-\item Possible transitions: a worker comes into the system; a worker completes a task and leaves the system. 
-\item $\Sv_n = (\alphav,\betav,t,\mathbf{w},l)$, where $n$ denotes $n^{th}$ transition, $\alphav,\betav$ are posterior parameters, $t$ is the time the $n^{th}$ transition happens, $\mathbf{w}$ is the number of workers working on each task $x$, $l$ is the total number of workers have arrived.
-\item Inter-transition time $\Delta_n \sim$ Exp$(\mu|\mathbf{w}|+r)$
-\item The optimal value is $V_0(\mathbf{S}_0)$ = (\ref{optV})
-\item The optimal policy $\pi^*$ is the sequence of $\zv_1^*,\ldots,\zv_N^*$ that achieves the maximum in Bellman's recursion
-\end{itemize}
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Problem: Dynamic Programming is computationally infeasible}
-
-\begin{itemize}
-\item In the simulation scenario:
-\begin{itemize}
-\item The number of states in state space at time n is $O((mn)^k)$.
-\vspace{2mm}
-\item Memory scales exponentially in $k$.
-\vspace{2mm}
-\item Computation scales exponentially in $k$.
-\vspace{2mm}
-\item E.g., $m = k = 8$, at time step $N=5$, there are $2.35426*10^{12}$ states.
-\vspace{2mm}
-\end{itemize}
-\item Even more complex in crowdsourcing scenario.
-\end{itemize}
-{\Large \color{blue} Curse of Dimensionality!}\\
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
-\frametitle{Our approach: Upper bound+heuristics}
-\begin{itemize}
-\item We first calculate an upper bound to the original problem.
-\item We then propose an index-based heuristic policy.
-\item We use the upper bound to measure the performance of the heuristic policy.
-\end{itemize}
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\frametitle{Pre-computations: 2. Occupation Measure $\rho^*$ of an optimal policy of $Q(\lambdav^*)$}
+\begin{Lemma}\label{th:exist}
+Let $\rho^*$ be an optimal solution to \eqref{eq:lp},
+then $\rho^*$ is the occupation measure of an optimal policy to $Q(\lambdav^*)$.
+\end{Lemma}
+\vspace{0.5cm}
+A quick justification of Lemma \ref{th:exist}: 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Forming an upper bound}
-%\centering
-%  \includegraphics[width=0.8\textwidth]{ub_flowchart_1.png}
-%%\tikzstyle{decision} = [diamond, draw, fill=blue!20, 
-%%    text width=8em, text badly centered, node distance=5cm, inner sep=-10pt]
-%%\tikzstyle{block} = [rectangle, draw, fill=blue!20, 
-%%    text width=8em, text centered, rounded corners, minimum height=2em]
-%%\tikzstyle{line} = [draw, -latex']
-%%\tikzstyle{cloud} = [draw, ellipse,fill=red!20, node distance=5cm,
-%%    minimum height=2em]
-%% \centering 
-%%\begin{tikzpicture}[node distance = 15mm, auto]
-%%    % Place nodes
-%%    \node [block] (init) {MCS problem};
-%%   \node [cloud, right of=init] (system) {Lagrangian Relaxation};
-%%    \node [block, below of=init] (identify) {relaxed problem};
-%%    \node [cloud, right of=identify] (decom) {decomposition};
-%%    \node [block, below of=identify] (evaluate) {$k$ single-alternative MCS problems};
-%%   \node [cloud, right of=evaluate] (upp) {Computable upper bound};
-%%    % Draw edges
-%%    \path [line] (init) -- (system);
-%%    \path [line] (system) --  (identify);
-%%    \path [line] (identify) --  (decom);
-%%    \path [line] (decom) -- (evaluate);
-%%    \path [line] (evaluate) -- (upp);
-%%\end{tikzpicture}
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Step 1 in forming an upper bound:\\Lagrangian Relaxation}
-
-\begin{itemize}
-\item Original set of feasible policies:
-\[\Pi = \{\pi=(\zv_1,...,\zv_N):\sum_{x=1}^k z_{n,x}\leq m\}\]
-\item Relaxed set of policies:
-\[\Pi_1 = \{\pi=(\zv_1,...,\zv_N):\text{no constraint}\}\]
-\item Define $V_0^{\lambdav}(\Sv_0) = \sup_{\pi\in \Pi_1}\mathbb{E}^{\pi}[R-\sum_{n=1}^N(\lambda_n(\sum_{x=1}^kz_{n,x}-m))]$
-\end{itemize}
-\begin{lemma}[1]
-For $\lambdav\geq 0$, we have
-\begin{equation*}
-V_0^{\lambdav}(\Sv_0) \geq V_0(\Sv_0)
-\end{equation*}
-\end{lemma}
+\eqref{eq:lp} is the dual of \eqref{LP-p} attains $Q(\lambdav^*)$. By dynamic program theory ??????(Don't know what theory), solutions to \eqref{eq:lp} form the occupation measure of optimal solutions of $Q(\lambdav^*)$.
 
 \end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Step 2 in forming an upper bound:\\ Decompose the relaxed DP to single-alternative DPs}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{Pre-computations: 2. Occupation Measure $\rho^*$ of an optimal policy of $Q(\lambdav^*)$}
+Remark: 
 \begin{itemize}
-\item Define $V_{0,x}^{\lambdav}(S_{0,x}) = \sup_{\pi^{(x)}\in \Pi^{(x)}}\mathbb{E}^{\pi^{(x)}}\left[R_x - \sum_{n=1}^{N}\lambda_nz_{n,x}\Big|S_{0,x}\right]$, $\forall x$,\\
-where $\Pi^{(x)}=\{\pi^{(x)} = (z_{1,x},z_{2,x},...,z_{N,x}): z_{n,x}\leq m, \forall 1\leq n\leq N\}$
+\item Any policy $\pi^*$ constructed using $\rho^*$ is an optimal solution to $Q(\lambdav^*)$ and satisfies
+\begin{equation}
+\mathbb{E}^{\pi}[|A_t|]=\frac{m_t}{K}
+\end{equation} 
+\item Solving for $\rho^*$ requires solving an LP with $|\substates||\subactions|T$ variables and at most $T|\substates|$ constraints.
 \end{itemize}
-\begin{lemma}[2]
-For any $\lambdav>\mathbf{0}$, let $V_{0,x}^{\lambdav}(S_{0,x})$ be the value of an single-alternative MCS problem on $x$, 
-\begin{equation} \label{decom}
-\footnotesize
-V_{0}^{\lambdav}(\Sv_0) = \sum_{x=1}^k V_{0,x}^{\lambdav}(S_{0,x}) + m\sum_{n = 1}^{N}\lambda_{n},
+\end{frame}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
+\frametitle{Pre-computations: 3. Indices of states}
+
+We first describe a specific way of computing an optimal policy $\pi^{\lambdav}$ of $Q(\lambdav)$:
+
+\vspace{0.5cm}
+Define value functions $V^{\lambdav}:\substates\times \{1,...,T\}\mapsto \mathbb{R}$ of $Q(\lambdav)$ recursively by
+\begin{equation}
+V^{\lambdav}(s,t)=
+\begin{cases}
+	\max_{\subaction\in \subactions}\{r_T(s,a)-a\lambda_T\} \;\;\; \text{if $t=T$,}\\
+	\max_{\subaction\in\subactions}\{r_t(s,a)-a\lambda_t+\sum_{s'\in\substates}P^{a}(s,s')V^{\lambdav}(s',t+1)\} \text{ o.w}
+\end{cases} 
 \end{equation}
-\end{lemma}
-\begin{itemize}
-\item Solving single-alternative MCS problems by dynamic programming is computationally feasible.
-\end{itemize}
-
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Now we have a computable upper bound}
-\begin{itemize}
-\item Lemma 1 and 2 hold for any $\lambdav\geq 0$, hence $\sum_{x=1}^k V_{0,x}^{\lambdav}(S_{0,x})+m\sum_{n=1}^N\lambda_{n}$ forms an upper bound to MCS problem for any given $\lambdav$
-\end{itemize}
-\begin{theorem}
-An upper bound on the optimal value of the original MCS problem is
-\begin{equation}\label{upperB}
-\inf_{\lambdav\geq \mathbf{0}}\Big[ \sum_{x=1}^k V_{0,x}^{\lambdav}(S_{0,x})+m\sum_{n=1}^N\lambda_{n}\Big] 
+Construct $\pi^{\lambdav}$ by
+\begin{equation}
+\pi^{\lambdav}(s,1,t)=
+\begin{cases*}
+1\;\;\;\text{if one-step lookahead value for $a=1$ is} \\
+\;\;\;\;\;\text{greater than or equal to $a=0$}\\
+0 \;\;\;\text{otherwise}
+\end{cases*}
 \end{equation}
-\end{theorem}
-
-
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
-\frametitle{Compute the tightest possible upper bound}
-\begin{itemize}
-\item $V_0^{\lambda}(\Sv_0)$ is a convex function about $\lambdav$.
-\item Use first-order gradient descent
-\item Subgradient at $\lambdav$:
-\[(-\mathbb{E}^{\pi_x^*(\lambdav)}[z_{n,x}|S_{0,x}]:n=1,...,N)\]
-where $\pi_x^*(\lambdav)$ is the optimal policy for single-task MCS problem with cost $\lambdav$.
-\item Subgradient can be computed recursively.
-\end{itemize}
+\frametitle{Pre-computations: 3. Indices of states}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{This analysis also inspires this index policy}
-For simulation scenario:\\
-\vspace{3mm}
- - Let $\bar{\lambdav}$ achieves the infimum in (3).\\
- \vspace{2mm}
- - Let $z^{\lambdav}_{n,x}(S_{n-1,x})$ be the number of samples taken under an optimal single-alternative policy given $\lambdav$, breaking ties arbitrarily.\\
- \vspace{2mm}
- At each time step $n=1,\ldots,N$,
-\begin{enumerate}
-  \item Let $\beta^* = \inf \big\{\beta
-  \geq 0: \sum_x z^{\beta\bar{\lambdav}}_{n,x}(S_{n-1,x})\leq m \big\}$.
-  \item Set $\lambdav^* = \beta^* \lambdav$.
-  \item Let $\mathbf{z}_n = \{z^{\lambdav^*}_{n,x},x = 1,...,k\}$, breaking ties arbitrarily between different allocations $\zv_n$ that satisfy this constraint.
-\end{enumerate}
 
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{This analysis also inspires this index policy}
-For crowdsourcing scenario:\\
-\vspace{7mm}
-While $\ell<N$:
-\begin{enumerate}
-\item For each $x \in \{1,\ldots,k\}$, compute $\beta^*_x = \inf \{ \beta\geq 0 : z_{\ell,x}^{ \beta\bar{\lambdav}}= 1\}$.
-\item Let $x_* = \arg\max_x{\beta^*_x}$. Break tie arbitrarily.
-\item Assign task $x_*$ to the $\ell^{th}$ worker.
-\end{enumerate}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Numerical experiment}
-
-For each $k=2,4,8,16$
-\begin{itemize}
-\item $m = k$
-\item $d_x = 0.2, \forall x \in \{1,...,k\}$
-\item $\Sv_0=(\alphav_0,\betav_0)=(1,1)^k$
-\item $\square$ -- Upper bound
-\item --- 95\% confidence interval with index policy, based on 10000 replications
-\item {\huge\textbf{--}}  95\% confidence interval with equal allocation policy, based on 50000 replications
-\end{itemize}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Numerical experiment}
-%\centering
-%\includegraphics[width=9.7cm]{simPlots_0707_cropped.pdf}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Numerical experiment}
-
-For each $k=4,8,12, 16$
-\begin{itemize}
-\item $m = 1.25k$
-\item $d_x = 0.5, \forall x \in \{1,...,k\}$
-\item $(\alphav_0,\betav_0)=(1,1)^k$
-\item $\square$ -- Upper bound
-\item {\color{red}--} 95\% confidence interval with index policy, based on 10000 replications
-\item {\huge\textbf{--}}  95\% confidence interval with equal allocation policy, based on 50000 replications
-\item {\huge\textbf{- -}} 95\% confidence interval with optimistic knowledge gradient policy (Chen et al 2013), based on 10000 replications. 
-\end{itemize}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Numerical experiment}
-%\centering
-%\includegraphics[width=9.7cm]{plotSimUp_okg_cropped.pdf}
-
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Conjecture: Index policy is asymptotically optimal}
-Conjecture: The index policy perform asymptotically close to an optimal policy as $k$ tends to infinity while keeping the number of resources to task ratio ($m/k$ or $N/k$) constant.
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Future Work}
-\begin{itemize}
-\item Prove the conjecture.
-\item Conduct numerical experiment on a larger scale
-\item Conduct experiment using index policy using Amazon Mechanic Turk in real time.
-\item Apply the same method to ranking $\&$ selection problems.
-\end{itemize}
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\frametitle{Publication strategy}
-\begin{itemize}
-\item Accepted: "Parallel Bayesian policy for finite-horizon
-multiple comparisons with a known standard". Proceedings of the 2014 Winter Simulation Conference 2014.
-\item Rejected: "Bayes-Optimal Effort Allocation in Crowdsourcing: Bounds and Index Policies", ICML 2015.
-\end{itemize}
-\end{frame}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}
-\centering
-{\Huge Thank you!}
-\end{frame}
 
 \end{document}
 
